2013-12-20  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* image.xcf:
	* head.xcf:
	* image.psd:
	* image.xcf:
	* ImageTexture3D.wrl: 

2013-12-20  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* ImageTexture3D.wrl:
	* ComposedTexture3D.wrl: 

2013-12-19  Holger Seelig  <holger.seelig@yahoo.de>

	* ImageTexture3D.wrl: 

2013-12-19  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* head.psd:
	* PixelTexture3D.wrl:
	* ImageTexture3D.wrl: 

2013-12-18  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* PixelTexture3D.wrl: 

2013-12-18  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.wrl:
	* TransformHandle.wrl: 

2013-12-17  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* wtc.wrl:
	* wtc.wrl.gz:
	* facade.wrl:
	* facade.wrl.gz:
	* astrnmy.wrl:
	* infra.wrl: 

2013-12-15  Holger Seelig  <holger.seelig@yahoo.de>

	* Connectors.wrl: 

2013-12-14  Holger Seelig  <holger.seelig@yahoo.de>

	* Connectors.wrl: 

2013-12-10  Holger Seelig  <holger.seelig@yahoo.de>

	* Wheel.wrl: 

2013-12-05  Holger Seelig  <holger.seelig@yahoo.de>

	* TransformHandle.wrl: 

2013-12-04  Holger Seelig  <holger.seelig@yahoo.de>

	* TransformHandle.wrl: 

2013-12-02  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.wrl: 

2013-12-02  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.wrl: 

2013-12-01  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.wrl: 

2013-12-01  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.wrl: 

2013-12-01  Holger Seelig  <holger.seelig@yahoo.de>

	* Routes.wrl:
	* Disk2D.wrl: 

2013-11-30  Holger Seelig  <holger.seelig@yahoo.de>

	* Routes.wrl: 

2013-11-29  Holger Seelig  <holger.seelig@yahoo.de>

	* image.xcf: 

2013-11-28  Holger Seelig  <holger.seelig@yahoo.de>

	* Routes.wrl: 

2013-11-27  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.wrl: 

2013-11-24  Holger Seelig  <holger.seelig@yahoo.de>

	* Routes.wrl: 
