@@ -1,3 +1,8 @@
+2013-12-21  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* Library.mdproj:
+	* LoadSensor.wrl: 
+
 2013-12-20  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* Library.mdproj:
